@@ -67,6 +67,7 @@ Template for new versions:
 ## Misc Improvements
 - `autochop`: better error output when target burrows are not specified on the commandline
 - `autoclothing` : now does not consider worn (x) clothing as usable/available, should help with using with `tailor` at same time
+- `burrow`: flood fill now requires an explicit toggle before it is enabled to help prevent accidental flood fills
 - wherever units are listed in DFHack tools, properties like "agitated" or (-trained-) are now shown
 - `work-now`: now saves its enabled status with the fort
 - `fastdwarf`: now saves its state with the fort
